--- a/package.json
+++ b/package.json
@@ -17,8 +17,18 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.6.4",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.2",
     "vite": "^3.0.7"
   }
 }
