--- a/.eslintrc
+++ b/.eslintrc
@@ -7,19 +7,17 @@
     "plugin:react/recommended",
     "standard-with-typescript",
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "prettier/react",
     "prettier"
   ],
   "overrides": [
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
   "plugins": [
     "react",
-    "@typescript-eslint",
     "prettier"
   ],
   "rules": {
